# weechat-discord

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  USAGE_WARNING.md  azure-pipelines.yml  build.rs  find_token.py  readme.md
.github/workflows/: ci.yml
ci/: azure-build-template.yml
parsing/: Cargo.toml  README.md
parsing/src/: discord_grammar.pest  lib.rs  main.rs
src/: bar_items.rs  buffers.rs  command.rs  config.rs  ffi.rs  hook.rs  lib.rs  printing.rs  sync.rs  synchronization.rs  utils.rs  weecord.c
src/discord/: client.rs  discord_client.rs  event_handler.rs  format.rs  formatting.rs  mod.rs
src/ffi/: macros.rs  mod.rs  weecord.c
src/weechat_utils/: buffer_manager.rs  message_manager.rs  mod.rs
