[package]
name = "weechat-discord"
version = "0.2.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[lib]
name = "weecord"
crate-type = ["dylib"]

[features]
default = ["onig"]

pcre = ["parsing/pcre"]
onig = ["parsing/onig"]

[dependencies]
libc = "0.2.60"
lazy_static = "1.3.0"
dirs = "2.0.1"
crossbeam-channel = "0.4.0"
regex = "1.2.1"
indexmap = "1.1.0"

[dependencies.parking_lot]
rev = "046a171"
git = "https://github.com/terminal-discord/parking_lot"

[dependencies.serenity]
git = "https://github.com/terminal-discord/serenity"
rev = "2e878490"
default_features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.parsing]
path = "parsing"

[dependencies.weechat]
git = "https://github.com/terminal-discord/rust-weechat"
rev = "6c42e5e"

[dependencies.weechat-sys]
git = "https://github.com/terminal-discord/rust-weechat"
rev = "6c42e5e"

#[patch."https://github.com/terminal-discord/rust-weechat"]
#weechat-sys = { path = "../rust-weechat/weechat-sys" }
#weechat = { path = "../rust-weechat/weechat-rs" }
