[package]
name = "weechat-discord"
version = "0.2.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[lib]
name = "weecord"
crate-type = ["dylib"]

[features]
default = ["onig"]

pcre = ["parsing/pcre"]
onig = ["parsing/onig"]

[dependencies]
libc = "0.2.70"
lazy_static = "1.4.0"
dirs = "2.0.2"
crossbeam-channel = "0.4.2"
regex = "1.3.7"
indexmap = "1.3.2"
json = "0.12.4"
parking_lot = "0.9.0"

[dependencies.serenity]
git = "https://github.com/vkleen/serenity"
rev = "93e6c7d2"
default_features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.parsing]
path = "parsing"

[dependencies.weechat]
git = "https://github.com/terminal-discord/rust-weechat"
rev = "39219d7"

[dependencies.weechat-sys]
git = "https://github.com/terminal-discord/rust-weechat"
rev = "39219d7"

#[patch."https://github.com/terminal-discord/rust-weechat"]
#weechat-sys = { path = "../rust-weechat/weechat-sys" }
#weechat = { path = "../rust-weechat/weechat-rs" }
