[package]
name = "parsing"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[features]
pcre = ["simple_ast/pcre"]
onig = ["simple_ast/onig"]

[dependencies]
lazy_static = "1.3.0"

[dependencies.simple_ast]
git = "https://github.com/Noskcaj19/simple-ast"
rev = "7b9d765"
version = "0.1.0"
default-features = false
